eks/backend/sos-backend-prod-eip-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sos-backend-prod-lb-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-southeast-1:864185773574:certificate/9d6baee7-f865-4ae5-b0e4-b74374d775c6
spec: 
  type: LoadBalancer
  selector:   
    app: sos-backend-prod
  ports:  
    - name: sos-backend-prod-svc-443-8080
      port: 443
      protocol: TCP
      targetPort: 8080
