eks/backend/sos-backend-prod-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sos-backend-prod-svc
spec:
  selector:
    app: sos-backend-prod
  ports:
    - name: sos-backend-prod-svc-8080-8080
      port: 8080
      protocol: TCP
  type: NodePort
