eks/backend/deploy-prod.yaml
##################################################################################################
#  Sos Backend Satefulset
#  Maximum 2 Replicas
##################################################################################################
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  name: sos-backend-prod 
  labels:   
    app: sos-backend-prod
spec: 
  serviceName: "sos-backend-prod-svc"
  replicas: 2
  selector:
    matchLabels:     
      app: sos-backend-prod
  template:   
    metadata:     
      labels:       
        app: sos-backend-prod
    spec:
      securityContext:
        runAsUser: 0
      volumes:       
        - name: config-volume
          configMap:         
            name: sos-backend-prod-config
        - name: sos-backend-data-volume
          persistentVolumeClaim:
            claimName: efs-sos-backend-prod-pvc2
      containers:     
        - name: sos-backend-prod      
          image: ghcr.io/sos-hub-vn/sos-backend:<<version>>
          imagePullPolicy: Always
          ports:       
            - containerPort: 8080
          resources:
            limits:
              cpu: 800m
              memory: 1600Mi
            requests:
              cpu: 400m
              memory: 800Mi
          volumeMounts:
            - name: config-volume         
              mountPath: /usr/local/sos/config
            - name: sos-backend-data-volume         
              mountPath: /usr/local/sos/data
          securityContext:
            privileged: true
            runAsUser: 0
          command:
            - "ash"
          args:  ["config/run-sos-backend.sh","$(POD_NAME)"]
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/systemctl/info
              port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 20
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /api/v1/systemctl/info
              port: 8080
            initialDelaySeconds: 40
            timeoutSeconds: 20
      imagePullSecrets:
        - name: gitcred
---
##################################################################################################
#  Sos-backend Load Balancer Service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: sos-backend-prod-svc
spec:
  selector:
    app: sos-backend-prod
  ports:
    - name: sos-backend-prod-svc-8080-8080
      port: 8080
      protocol: TCP
      #nodePort: 31234
  clusterIP: None
---
##################################################################################################
#  ES Ingress for health check
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress-prod
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sos-backend-prod-svc
                port:
                  number: 8080
---
##################################################################################################
#  Elastic load balancer
##################################################################################################
apiVersion: v1
kind: Service
metadata: 
  name: sos-backend-prod-lb-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-southeast-1:864185773574:certificate/9d6baee7-f865-4ae5-b0e4-b74374d775c6
spec: 
  type: LoadBalancer
  selector:   
    app: sos-backend-prod
  ports:  
    - name: sos-backend-prod-svc-443-8080
      port: 443
      protocol: TCP
      targetPort: 8080
